--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-07  Wim Taymans  <wim@fluendo.com>
+
+	* gst/gstelement.c: (gst_element_add_pad),
+	(gst_element_remove_pad), (gst_element_pads_activate),
+	(gst_element_dispose):
+	Small cleanups, free the state mutex.
+
 2005-01-06  Wim Taymans  <wim@fluendo.com>
 
 	* gst/elements/gstfakesrc.c: (gst_fakesrc_loop),
