--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_type_find):
+	  Decrease certainty a bit so we use flxdec for .flx videos.
+
 2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_dispose):
