--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-01-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
+	(gst_ffmpegdec_open), (gst_ffmpegdec_frame),
+	(gst_ffmpegdec_handle_event), (gst_ffmpegdec_chain):
+	  Add B-frame timestamp smoothing.
+
+2005-01-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame),
 	(gst_ffmpegdec_chain):
 	  Separate buffer handling from actual decoding, handle pending
