--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-01-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
+	(gst_ffmpeg_pixfmt_to_caps), (gst_ffmpeg_caps_to_pixfmt):
+	  Add extradata to huffyuv, sync RGBA32 up with gst-plugins.
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_query),
+	(gst_ffmpegdec_event):
+	  Make somewhat clearer.
+
 2005-01-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* TODO:
