--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-01-31  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_lowres_get_type),
+	(gst_ffmpegdec_skipframe_get_type), (gst_ffmpegdec_class_init),
+	(gst_ffmpegdec_init), (gst_ffmpegdec_connect),
+	(gst_ffmpegdec_frame), (gst_ffmpegdec_set_property),
+	(gst_ffmpegdec_get_property):
+	  Implement B-frame skipping and low-resolution decoding (useful
+	  for very slow CPUs).
+
 2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_register):
