--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/gstelement.h:
+	* gst/gstutils.c: (gst_element_populate_std_props),
+	(gst_element_class_install_std_props):
+	* gst/gstutils.h:
+	  Re-add gst_element_class_install_std_props, move to gstutils.h.
+
 2005-01-26  Wim Taymans  <wim@fluendo.com>
 
 	* gst/elements/gstidentity.c: (gst_identity_init),
