--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-02-10  Andy Wingo  <wingo@pobox.com>
 
+	* docs/design/part-MT-refcounting.txt: Fill to 80 columns.
+
 	* gst/gstcaps.h:
 	* gst/gstcaps.c (gst_caps_get_writable): Change from
 	copy_on_write.
